--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "ant-design-vue": "^1.7.6",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
