--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "ant-design-vue": "^1.7.6",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "router": "^1.3.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
